--- a/app/src/main/res/layout/quest_add.xml
+++ b/app/src/main/res/layout/quest_add.xml
@@ -81,20 +81,19 @@
 
             </FrameLayout>
 
-            <android.support.constraint.ConstraintLayout
+            <LinearLayout
+
+                android:padding="10dp"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
                 android:orientation="vertical">
 
-                <android.support.constraint.ConstraintLayout
-                    android:id="@+id/constraint1"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:orientation="horizontal"
-                    app:layout_constraintBottom_toTopOf="@+id/constraint2"
-                    app:layout_constraintTop_toTopOf="parent">
+                    android:orientation="vertical">
 
                     <EditText
                         android:id="@+id/textbox_add_title"
@@ -104,58 +103,43 @@
                         android:ems="10"
                         android:fontFamily="@font/work"
                         android:hint="의뢰 제목"
-                        android:inputType="textPersonName"
-                        app:layout_constraintBottom_toTopOf="@+id/imageView8"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="@+id/imageView8" />
+                        android:inputType="textPersonName" />
 
                     <ImageView
                         android:id="@+id/imageView8"
                         android:layout_width="match_parent"
-                        android:layout_height="20dp"
-                        android:background="@drawable/gray_underbar"
-                        android:textSize="10dp"
-                        app:layout_constraintBottom_toBottomOf="parent" />
-                </android.support.constraint.ConstraintLayout>
+                        android:layout_height="22dp"
+                        android:background="@drawable/gray_underbar" />
+                </LinearLayout>
 
-                <android.support.constraint.ConstraintLayout
-                    android:id="@+id/constraint2"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:orientation="horizontal"
-                    app:layout_constraintBottom_toTopOf="@+id/constraint3">
+                    android:orientation="vertical">
 
                     <EditText
                         android:id="@+id/text_point"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:background="#00000000"
                         android:ems="10"
                         android:fontFamily="@font/work"
                         android:hint="의뢰 요청 희망 위치"
-                        android:inputType="text"
-                        app:layout_constraintBottom_toTopOf="@+id/imageView3"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="@+id/imageView3" />
+                        android:inputType="text" />
 
                     <ImageView
                         android:id="@+id/imageView3"
                         android:layout_width="match_parent"
-                        android:layout_height="20dp"
-                        android:background="@drawable/gray_underbar"
-                        android:textSize="10dp"
-                        app:layout_constraintBottom_toBottomOf="parent" />
-                </android.support.constraint.ConstraintLayout>
+                        android:layout_height="22dp"
+                        android:background="@drawable/gray_underbar" />
+                </LinearLayout>
 
-                <android.support.constraint.ConstraintLayout
-                    android:id="@+id/constraint3"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:orientation="horizontal"
-                    app:layout_constraintBottom_toBottomOf="parent">
+                    android:orientation="vertical">
 
                     <EditText
                         android:id="@+id/textbox_add_reward"
@@ -165,23 +149,18 @@
                         android:ems="10"
                         android:fontFamily="@font/work"
                         android:hint="사례금 입력"
-                        android:inputType="numberSigned"
-                        app:layout_constraintBottom_toTopOf="@+id/imageView2"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent" />
+                        android:inputType="numberSigned"/>
 
                     <ImageView
                         android:id="@+id/imageView2"
                         android:layout_width="match_parent"
                         android:layout_height="22dp"
-                        android:background="@drawable/gray_underbar"
-                        android:textSize="10dp"
-                        app:layout_constraintBottom_toBottomOf="parent" />
+                        android:background="@drawable/gray_underbar" />
 
-                </android.support.constraint.ConstraintLayout>
+                </LinearLayout>
 
 
-            </android.support.constraint.ConstraintLayout>
+            </LinearLayout>
 
 
         </LinearLayout>
